# transcribe-me

./: .cursorrules  .dockerignore  .env.example  .gitignore  .release-please-config.json  .tools-version  .transcribe.yaml  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  catalog-info.yaml  compose.example.yaml  compose.yaml  docker-compose.example.yaml  pyproject.toml  pytest.ini  release.py  requirements.txt  setup.py  transcribe-schema.yaml
.github/: release-drafter.yml  release-please.yml
.github/workflows/: build.yaml  fix-release.yaml  prelease.yaml  prerelease.yaml  publish-image.yaml  publish-latest-image.yaml  publish-package.yaml  publish.yaml  pull-request-release.yaml  release-drafter.yaml  release-latest.yaml  release-please.yaml  release-version.yaml  release.yaml  version.yaml
tests/: conftest.py  test_main.py
tests/unit/audio/: test_transcription.py
transcribe_me/: __init__.py  cli.py  main.py
transcribe_me/audio/: __init__.py  splitting.py  transcription.py
transcribe_me/config/: __init__.py  config_manager.py  schema.yaml
transcribe_me/summarization/: __init__.py  summarizer.py
transcribe_me/tests/: test_summarization.py
